
- Issue #3219: Calling a function with repeated keyword arguments, f(a=2, a=23),
  would not cause a syntax error.  This was regression from 2.4 caused by the
  switch to the new compiler.

- Issue #2862: Make int and float freelist management consistent with other
  freelists.  Changes their CompactFreeList apis into ClearFreeList apis and
  calls them via gc.collect().

Library
-------

- Issue #2663: add filtering capability to shutil.copytree().

- Issue #1622: Correct interpretation of various ZIP header fields.

- Issue #1526: Allow more than 64k files to be added to Zip64 file.

- Issue #1746: Correct handling of zipfile archive comments (previously
  archives with comments over 4k were flagged as invalid). Allow writing
  Zip files with archives by setting the 'comment' attribute of a ZipFile.  

- Issue #449227: Now with the rlcompleter module, callable objects are added
  "(" when completed.

- Issue #3190: Pydoc now hides the automatic module attribute __package__ (the
  handling is now the same as that of other special attributes like __name__).

- Issue #2885 (partial): The urllib.urlopen() function has been deprecated for
  removal in Python 3.0 in favor of urllib2.urlopen().

- Issue #2885 (partial): lib2to3 has been updated to handle the renaming of the
  urllib module in Python 3.0 to urllib.request, urllib.parse, and
  urllib.error.

- Issue #2113: Fix error in subprocess.Popen if the select system call is
  interrupted by a signal.

Build
-----

- Issue #3215: Build sqlite3 as sqlite3.dll, not sqlite3.pyd.


What's New in Python 2.6 beta 1?
================================

*Release date: 18-June-2008*

Core and Builtins
-----------------

- Issue #3211: warnings.warn_explicit() did not guard against its 'registry'
  argument being anything other than a dict or None. Also fixed a bug in error
  handling when 'message' and 'category' were both set to None, triggering a
  bus error.
